--- a/googleproject1.html
+++ b/googleproject1.html
@@ -7,24 +7,24 @@
         }
         a:link {
              text-decoration: none;
-             color: rgb(110, 110, 110);
+             color: rgb(48, 48, 48);
         }
         a:visited {
             text-decoration: none;
-            color: rgb(110, 110, 110);
+            color: rgb(48, 48, 48);
         }
         a:hover {
              text-decoration: underline;
-             color: rgb(110, 110, 110);
+             color: rgb(48, 48, 48);
         }
         a:active {
             text-decoration: underline;
-            color: rgb(110, 110, 110);
+            color: rgb(48, 48, 48);
         }
         .nav-items {
             border: 3px solid transparent;
             border-radius: 10%;
-            color: rgb(110, 110, 110);
+            color: rgb(48, 48, 48);
             text-decoration: none; 
             font-size: 11pt;
             padding: 5px;
@@ -48,7 +48,7 @@
         grid-row-start: 8;
         grid-column-start: 9;
         grid-column-end: 12;
-        border-radius: 10%;
+        border-radius: 20px;
         border: 1px solid lightslategrey;
         padding-left: 35px;
         background-image: url("https://image.flaticon.com/icons/svg/54/54481.svg");
@@ -75,11 +75,11 @@
         margin: 10px;
         }
         .searchbutton, .luckybutton {
-            background-image:linear-gradient(rgb(208, 209, 209),white);
-            margin: 5px;
-            padding: 3px;
-            width: auto;
-            justify-self: center;
+        background-image:linear-gradient(white,rgba(187, 187, 187, 0.329));
+        margin: 5px;
+        padding: 3px;
+        width: auto;
+        justify-self: center;
         }
         .searchbutton:hover, .luckybutton:hover {
             border: 1px solid black;
